2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	Comment smoke typefinder for now. The smokedec plugin needs one
	frame per buffer but we have no parser yet, thus it simply crashes
	in most situations.

2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	Add typefinder for the smoke video codec. Copied from the jpeg plugin.

2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/typefind/gsttypefindfunctions.c: (mid_type_find),
	(plugin_init):
	Add midi typefinder, copied from the timidity plugin.

2008-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: Tomasz Sałaciński <tsalacinski gmail com>

	* gst/subparse/gstsubparse.c: (parse_mdvdsub):
	* tests/check/elements/subparse.c: (test_microdvd_with_italics),
	  (subparse_suite):
	  Forward slashes at the beginning and end of a line also signify
	  italics (Fixes: #518162).

2008-02-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/gst-plugins-base.supp:
	Add a suppression for a cached value in GIO that wasn't moved
	while moving gio from -bad to -base.

2008-02-22  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Brian Cameron <brian dot cameron at sun dot com>

	* configure.ac:
	Don't hardcode -Wall and -Werror for configure checks, this fails
	with non-GCC compilers. Fixes bug #517991.

2008-02-21  Stefan Kost  <ensonic@users.sf.net>

	* gst/audiotestsrc/gstaudiotestsrc.c:
	  Mark buffers as GAP,if volume is 0.0 and fix the previous logic.

2008-02-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gnomevfs/gstgnomevfssink.c:
	(gst_gnome_vfs_sink_handle_event):
	Return FALSE when seeking for a new segment fails instead
	of silently ignoring the failure and appending every buffer
	that comes for the new segment.

2008-02-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaysink.c: (find_property),